<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码登录"
            android:textSize="@dimen/dp_25"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"></TextView>

    </RelativeLayout>

    <RelativeLayout
        android:alpha="1"
        android:background="@color/white"
        android:id="@+id/login_relat"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.mingle.widget.LoadingView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/loadView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/load_name"
            android:textColor="@color/grey8"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/loadView"
            android:layout_centerHorizontal="true"
            android:text="加载中..."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_line"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_huge"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:hint="@string/account"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@color/tv_gray_deep"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/bottom_gray" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_huge"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"

                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="9"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/tv_gray_deep"
                    android:textSize="@dimen/text_size_normal" />

                <ImageView
                    android:id="@+id/iv_see_password"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/img_pw"
                    android:layout_marginRight="5dp"
                    android:layout_toRightOf="@+id/et_password"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@mipmap/noout" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/bottom_gray" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tex_no_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/btn_login" />

            <TextView
                android:id="@+id/tex_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/immediately_register"
                android:textColor="@color/btn_login" />

        </RelativeLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_huge"
            android:background="@drawable/btn_orange_selector"
            android:paddingBottom="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_line_bottom"
        android:visibility="visible"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/weichat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/weichat"></ImageView>

        <ImageView
            android:id="@+id/weibo"
            android:layout_marginLeft="40dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/weibo"></ImageView>

        <ImageView
            android:id="@+id/message"
            android:layout_marginLeft="80dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/message"></ImageView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>